<resources>
    <string name="app_name">AndroidAssesment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="agrementText"><![CDATA[Terms and Conditions agreement(T&Cs) is the agreement that includes the terms,the rules and the guidelines of acceptable behavior and other useful sections to which users must agree in order to use or access your website and mobile app]]></string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="verification_code">Verification Code</string>
</resources>